@@ -11,8 +11,8 @@
             "role": "lead"
         }
     ],
-    "version": "2.30.1",
-    "time": "2019-11-03",
+    "version": "2.30.2",
+    "time": "2021-05-16",
     "repositories": [
         {
             "type": "pear",
