@@ -2,8 +2,7 @@
 v2.30.2
 -------
 
-
-
+|+
 
 -------
 v2.30.1
@@ -17,6 +16,8 @@ v2.30.1
 v2.30.0
 -------
 
+[mjr] Remove redundant array_diff that could cause removal of emails from local
+      message cache (PR #3, Silvio Zimmer <silvio.zimmer@die-kinderwelt.com>).
 [mjr] Support returning entire thread list (Ticket #14943,
       mariusz.goch@spacja.com).
 
